package model;

public class CompteBancaire {
    private String numeroCompte;
    private String titulaire;
    private double solde;
    private Double plafond;
    private List<Operation> historique;
}
